syntax = "proto3";

option csharp_namespace = "trackService.GrpcService";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc RequestTracksInfo(Empty) returns (ReplyTracksInfo);
}

//Start MapData
message Empty 
{
 string ID = 1;
}
//Start Track Info
enum TrackDir{
    TrackDir_None = 0;
    TrackDir_Straight = 1;
    TrackDir_Curve = 2;
}
enum TrackStatus{
    TrackStatus_NotDefine = 0;
    TrackStatus_Manaul = 1;
    TrackStatus_Auto = 2;
    TrackStatus_Alarm = 3;
}
enum TrackBlock
{
    TrackBlock_None=0;
    TrackBlock_Block=1;
    TrackBlock_NonBlock=2;
}
message ReplyTracksInfo { repeated TrackInfo tracks_info = 1; }
//message TrackInfo { string track_id = 1; TrackDir dir = 2; TrackStatus status = 3; int32 alarmCode=4; 
    //bool Alive=5; TrackBlock isBlock=6;}
message TrackInfo { 
    int32 index=1;
    TrackStatus status=2;
    TrackDir dir = 3;
    TrackBlock block = 4;
    string rgv_user=5;
    string track_user=6;
    int32 trackChangeCount=7;
    int32 alarmCode=8;
    string version=9;
    string trackNumber=10;
}
